# dcm

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  README.md  examples.html  first_steps.html  genindex.html  installation.html  intro.html  introduction.html  maxwell.html  ngsolve_addon.cmake  objects.inv  prf-prf.html  publish.sh  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.py  test.html
_autosummary/: dualcellspaces.dualcellspaces.html  dualcellspaces.html
_sources/: examples.md  installation.md  intro.md  introduction.md  maxwell.md  reference.md  reference.rst  test.md
_sources/_autosummary/: dualcellspaces.dualcellspaces.rst  dualcellspaces.rst
_sources/examples/: grad.ipynb  mass_lumping.ipynb  maxwell_radial_pml.ipynb  qualitative_dispersion.ipynb  ring_resonator.ipynb  waveguide_3d.ipynb  waveguide_bend.ipynb
_sources/maxwell/: basic_ideas.md  hcurl.md  mass_lumping.md  problem_setting.md
_sources/test/: test.md
demos/: dc_intrules.py  test_spaces.py
docs/: Makefile  _config.yml  _toc.yml  createimages.tex  examples.md  first_steps.md  installation.md  intro.md  maxwell.md  references.bib
docs/examples/: basics.ipynb  grad.ipynb  mass_lumping.ipynb  qualitative_dispersion.ipynb  ring_resonator.ipynb  td_maxwell_evp.ipynb  waveguide_3d.ipynb
docs/images/: convertimages.sh  createimages.tex
docs/maxwell/: basic_ideas.md  diffops.md  hcurl.md  introduction.md  mass_lumping.md  time_stepping.md
examples/: basics.html  grad.html  mass_lumping.html  qualitative_dispersion.html  ring_resonator.html  waveguide_3d.html
maxwell/: basic_ideas.html  bibliography.html  diffops.html  hcurl.html  introduction.html  mass_lumping.html  problem_setting.html  time_stepping.html
src/: __init__.py  dcs_common.hpp  dualcellspaces.cpp  h1cells.hpp  h1dualcells.cpp  h1dualcells.hpp  h1dualcells3d.cpp  h1dualcells3d.hpp  h1primalcells.cpp  h1primalcells.hpp  hcurlcells.hpp  hcurldualcells.cpp  hcurldualcells.hpp  hcurlprimalcells.cpp  hcurlprimalcells.hpp  hdivcells.hpp  hdivdualcells.cpp  hdivdualcells.hpp  hdivprimalcells.cpp  hdivprimalcells.hpp  intrules.cpp  intrules.hpp  l2cells.cpp  l2cells.hpp  nanocells.cpp  nanocells.hpp  smallsparse.cpp  smallsparse.hpp  supersparse.cpp  supersparse.hpp  test.cpp  test.hpp  test_smallsparse.cpp
test/: test.html
