[project]
name = "dualcellspaces"
version = "0.0.1"
description="NGSolve add on for the dual cell method"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]
classifiers = [
  "License :: OSI Approved :: MIT License",
]

[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11_stubgen", "cmake", "toml", "ngsolve>=6.2.2404"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
experimental = true
# This adds ngsolve (with exact build-time version) to the dependencies
metadata.dependencies.provider="ngsolve._scikit_build_core_dependencies"
